modify social assistant value
