# app/Http/Controllers/Api/Admin/AdminOrganizationController.php
@@ -403,7 +403,7 @@ class AdminOrganizationController extends Controller
      *                     @OA\Items(type="object",
      *
      *                          @OA\Property(property="user_id", type="integer", description="user id", example="1"),
-     *                          @OA\Property(property="role_id", type="integer", description="role id", example="2")
+     *                          @OA\Property(property="role_name", type="string", description="role name", example="manager")
      *                 )
      *               )
      *          )
@@ -469,7 +469,7 @@ class AdminOrganizationController extends Controller
 
             foreach ($data['data'] as $datum) {
                 $user = User::query()->find($datum['user_id']);
-                $role = Role::query()->find($datum['role_id']);
+                $role = Role::query()->firstWhere('name', $datum['role_name']);
 
                 OrganizationAssociateUsersWithRolesAction::execute($user, $role, $organization);
             }
@@ -512,7 +512,7 @@ class AdminOrganizationController extends Controller
      *                     @OA\Items(type="object",
      *
      *                          @OA\Property(property="user_id", type="integer", description="user id", example="1"),
-     *                          @OA\Property(property="role_id", type="integer", description="role id", example="2")
+     *                          @OA\Property(property="role_name", type="string", description="role name", example="manager")
      *                 )
      *               )
      *          )
@@ -578,7 +578,7 @@ class AdminOrganizationController extends Controller
 
             foreach ($data['data'] as $datum) {
                 $user = User::query()->find($datum['user_id']);
-                $role = Role::query()->find($datum['role_id']);
+                $role = Role::query()->firstWhere('name', $datum['role_name']);
 
                 OrganizationDisassociateUsersWithRolesAction::execute($user, $role, $organization);
             }
@@ -612,7 +612,7 @@ class AdminOrganizationController extends Controller
      *     @OA\Parameter(
      *         name="role",
      *         in="path",
-     *         description="The role for filter users (manager or social_assistant)",
+     *         description="The role for filter users (manager or social-assistant)",
      *         required=true,
      *
      *         @OA\Schema(
@@ -793,7 +793,7 @@ class AdminOrganizationController extends Controller
      *     @OA\Parameter(
      *         name="role",
      *         in="path",
-     *         description="The role for filter users (manager or social_assistant)",
+     *         description="The role for filter users (manager or social-assistant)",
      *         required=true,
      *
      *         @OA\Schema(
